# senegal-lcluc-tensorflow

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  dockerhub.yml  lint.yml
ancillary/: Tappan04_WV-MS.txt  Tappan19_WV-MS.txt  Tappan23_WV-MS.txt  Tappan25_WV-MS.txt  Tappan29_WV-MS.txt  Tappan30_WV-MS.txt  Tappan32_WV-MS.txt  Tappan33_WV-MS_original.txt  TappanSquares_newCAS.txt
docs/: Labeling.md  STT.md  ValidationDatabase.md
graveyard/: class_percetage.py  compare_pred_results_sen.py  composite_class_percentages_v3.csv  eval_4class.py  eval_binary.py  eval_stat_ag.py  kernel_validation.py  merge_crop_mask.py  merge_tree_mask.py  predict.py  preprocess.py  preprocess_test.py  rasterio_clip.sh  validation.py
notebooks/: ValidationDashboard.ipynb  vhr_composite_visualization.ipynb
projects/crop_srv/: README.md
projects/land_cover/: README.md
projects/land_cover_nasa/: README.md
projects/land_use/: README.md
projects/tappan_cluster/: tappan_kmeans_cluster_generation.py  utils.py
projects/tappan_generation/: Tappan_corners.txt
projects/vhr_composite/: __init__.py
requirements/: Dockerfile  Dockerfile.GDAL  Dockerfile.RSGISLib  Dockerfile.dev  bh-gdal.sh  bh-proj.sh  bh-set-envvars.sh  build.sh  mdbtools-lexer.patch  tiledb-5cad65f4c.patch
scripts/: gedi_run.py  gee_app_landcover.js  geedim_download.py  validation_gmu.sh
senegal_lcluc_tensorflow/model/: common.py  glcm.py  toolbar.py  validation_dashboard.py  validation_dashboard_full.py  validation_dashboard_plain.py
senegal_lcluc_tensorflow/view/: tappan_pipeline_cli.py  (+3 more)
(+581 files in other folders)
